--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 .personalimg {
@@ -22,12 +23,22 @@
 .nav-link {
     color: black !important;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
+}
+
+.h5 {}
+
+.h6 {}
+
+.h1 {
+    font-weight: bolder;
 }
 
 body {
     background: url('../imgs/background.svg') no-repeat;
     background-size: cover;
+    background-repeat: repeat-y;
     height: 100%;
     padding-bottom: 50px;
+    font-family: 'Open Sans', sans-serif;
 }
